Fix spacing

--- a/src/scss/yellow/components/_card.scss
+++ b/src/scss/yellow/components/_card.scss
@@ -37,7 +37,7 @@
 
   &,
   &.media-box {
-    padding: 24px;
+    padding: $size-spacing-s;
   }
 
   &--shadow {
